--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,33 @@ body {
   background-size: cover;
   height: 100vh;
   background-position: center;
+  padding: 30% 0 0;
+
 }
 
-.container {
+.continer {
   width: 360px;
-  padding: 10% 0 0;
-  margin: auto;
+  margin: 0 auto 100px;
+  padding: 45px;
+}
+
+.form {
+  position: relative;
+  z-index: 1;
+  background: #ffffffef;
+  max-width: 360px;
+  margin: 0 auto 100px;
+  padding: 45px;
+  text-align: center;
+}
+.form input {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  outline: 1;
+  background: #000000;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
 }
