--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
   background-size: cover;
   height: 100vh;
   background-position: center;
-  padding: 30% 0 0;
+  padding: 7% 0 0;
 
 }
 
@@ -17,7 +17,7 @@ body {
 .form {
   position: relative;
   z-index: 1;
-  background: #ffffffef;
+  background: #ffffff36;
   max-width: 360px;
   margin: 0 auto 100px;
   padding: 45px;
@@ -26,7 +26,7 @@ body {
 .form input {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   outline: 1;
-  background: #000000;
+  background: #000000ad;
   width: 100%;
   border: 0;
   margin: 0 0 15px;
@@ -34,3 +34,12 @@ body {
   box-sizing: border-box;
   font-size: 14px;
 }
+.form button {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  border: 0;
+  padding: 15px;
+  color: #ffffff36;
+  
+
+}
+
