--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ body {
   margin: 0 auto 100px;
   padding: 45px;
   text-align: center;
+  border-radius: 40px;
 }
 .form input {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -33,13 +34,18 @@ body {
   padding: 15px;
   box-sizing: border-box;
   font-size: 14px;
+  border-radius: 20px;
+
 }
 .form button {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   border: 0;
   padding: 15px;
-  color: #ffffff36;
-  
+  color: #ffffff8f;
+  background: rgba(0, 128, 0, 0.288);
+  border-radius: 20px;
+  cursor: grabbing;
+  width: 40%;
 
 }
 
