Changed the image

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/Images/WomanHeadwrap\(s\).jpg); 
+  background-image: url("/Images/WomanHeadwrap\(s\).jpg"); 
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
