--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../Images/background.jpg"); 
+  background-image: url("https://bit.ly/32MwUct"); 
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
