Added a landing page withe the description of the Akan people

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,10 +8,9 @@ body {
 
 }
 
-.continer {
-  width: 360px;
-  margin: 0 auto 100px;
-  padding: 45px;
+.container {
+  width: px;
+  margin: 0 auto 10px;
 }
 
 .form {
@@ -47,8 +46,8 @@ body {
   border-radius: 20px;
   cursor: grabbing;
   width: 40%;
-
 }
+
 .form p {
   color: black;
   text-emphasis-color: 50px;
