--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,7 @@
 body {
-  background-image: url("/Images/African\ People.png") ;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.24), rgba(0, 0, 0, 0.322)),url("/Images/Woman\ with\ headwrap.jpg") ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  background-position: center;
 }
