--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://bit.ly/32MwUct"); 
+  background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("https://bit.ly/32MwUct"); 
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
@@ -49,7 +49,8 @@ body {
 }
 
 .form p {
-  color: black;
-  text-emphasis-color: 50px;
+  color: rgba(220, 230, 231, 0.918);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 15px;
 }
 
