--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,24 @@
 body {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.24), rgba(0, 0, 0, 0.322)),url("/Images/Woman\ with\ headwrap.jpg") ;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url("/Images/Woman\ with\ headwrap.jpg") ;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
   background-position: center;
+}
+.text {
+  color: #d49797;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15%;
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: ;
+}
+.text li {
+  list-style: none;
+  text-decoration: none;
+}
+.text a {
+  text-decoration: none;
+  color: #ffffff36;
 }
