--- a/css/styles.css
+++ b/css/styles.css
@@ -54,3 +54,17 @@ body {
   font-size: 15px;
 }
 
+.form a {
+  text-decoration: none;
+  color: #ffffff36;
+}
+
+.form li {
+  list-style: none;
+  padding: 10% 0 0;
+}
+
+.form li :hover {
+  
+}
+
