--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 body {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url("/Images/Woman\ with\ headwrap.jpg") ;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url("https://bit.ly/32MwUct") ;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -19,7 +19,7 @@ body {
 }
 .text a {
   text-decoration: none;
-  color: #ffffff36;
+  color: #ffffffb2;
 }
 
 .text a:hover { 
