--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 body {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url("https://bit.ly/32MwUct") ;
+  background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("https://bit.ly/32MwUct"); 
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -11,7 +11,6 @@ body {
   padding: 15%;
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: ;
 }
 .text li {
   list-style: none;
